--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
 
 services:
-	nginx:
-		build: requirements/nginx/
-		image: nginx
-		container_name: nginx
-		ports:
-			- "443:443"
-		restart: unless-stopped
+    nginx:
+        build: requirements/nginx/
+        image: nginx:latest
+        container_name: nginx
+        ports:
+            - "80:80"
+            - "443:443"
+        restart: unless-stopped
