--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,16 +1,23 @@
 FROM alpine:3.14
 
-RUN apk update && apk upgrade && apk add nginx && apk add openssl
+RUN apk update && apk upgrade && apk add nginx && apk add openssl;  \
+    echo "<h1>Hello world 1337!</h1>" > /var/www/localhost/htdocs/index.html;
 
 # nginx SSL
-RUN mkdir /etc/ssl
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
--keyout /etc/ssl/nginx.key \
--out /etc/ssl/nginx.crt \
+RUN mkdir -p /etc/ssl/private \
+    mkdir -p /etc/ssl/certs
 
+RUN openssl req -x509 -nodes -days 365 \
+    -subj "/C=CA/ST=QC/O=Company, Inc./CN=mydomain.com" -addext "subjectAltName=DNS:mydomain.com" \
+    -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key \
+    -out /etc/ssl/certs/nginx-selfsigned.crt;
 # nginx CONF
-COPY default /etc/nginx/conf.d/
+ADD $PWD/conf/default.conf /etc/nginx/http.d/default.conf
+# EXPOSE PORTS
+EXPOSE 80 443
+# Start nginx
+CMD ["/bin/sh", "-c", "nginx -g 'daemon off;'; nginx -s reload;"]
 
 
 #info:
-#https://devopsbuzz.com/nginx-docker-container-with-https-protocol/
+#https://codingwithmanny.medium.com/configure-self-signed-ssl-for-nginx-docker-from-a-scratch-7c2bcd5478c6
