--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,7 +1,19 @@
+# This is a default site configuration which will simply return 404, preventing
+# chance access to any other virtualhost.
 server {
-    listen  443 ssl;
-    ssl on;
-    ssl_certificate /etc/ssl/nginx.crt;
-    ssl_certificate_key /etc/ssl/nginx.key;
-    server_name localhost;
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        listen 443 ssl http2 default_server;
+        listen [::]:443 ssl http2 default_server;
+        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+        # New root location
+        location / {
+                root /var/www/localhost/htdocs;
+                # return 404;
+        }
+        # You may need this to prevent return 404 recursion.
+        location = /404.html {
+                internal;
+        }
 }
