--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -3,17 +3,30 @@
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
+
+        #ssl configuration
         listen 443 ssl http2 default_server;
         listen [::]:443 ssl http2 default_server;
+        ssl on;
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+
+        root /var/www/html;
+        index index.html index.php
+        server_name _;
         # New root location
         location / {
-                root /var/www/localhost/htdocs;
+                try_files $uri $uri/ =404;
                 # return 404;
         }
-        # You may need this to prevent return 404 recursion.
-        location = /404.html {
-                internal;
+        # pass PHP scripts to FastCGI server
+        location ~ \.php$ {
+                include /etc/nginx/fastcgi_params;
+                fastcgi_read_timeout 3600s;
+                fastcgi_buffer_size 128k;
+                fastcgi_buffers 4 128k;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_pass wordpress:9000;
+                fastcgi_index index.php;
         }
 }
