--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,11 @@
-FROM alpine:3.14
+FROM debian:buster
 
-RUN apk update && apk upgrade && apk add nginx && apk add openssl;  \
-    echo "<h1>Hello world 1337!</h1>" > /var/www/localhost/htdocs/index.html;
+RUN apt-get update
+RUN apt-get upgrade -y
+RUN apt-get install -y nginx
+RUN apt-get install -y php-fpm
+RUN apt-get install -y openssl
+RUN echo "<h1>Hello world 1337!</h1>" > /var/www/html/index.html
 
 # nginx SSL
 RUN mkdir -p /etc/ssl/private \
@@ -13,7 +17,7 @@ RUN openssl req -x509 -nodes -days 365 \
     -out /etc/ssl/certs/nginx-selfsigned.crt;
 
 # nginx CONF
-ADD $PWD/conf/default.conf /etc/nginx/http.d/default.conf
+ADD $PWD/conf/default.conf /etc/nginx/sites-available/default
 
 # EXPOSE PORTS
 EXPOSE 80 443
@@ -24,3 +28,4 @@ CMD ["/bin/sh", "-c", "nginx -g 'daemon off;'; nginx -s reload;"]
 
 #info:
 #https://codingwithmanny.medium.com/configure-self-signed-ssl-for-nginx-docker-from-a-scratch-7c2bcd5478c6
+#https://devopsbuzz.com/nginx-docker-container-with-https-protocol/n
