--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,32 +1,48 @@
-version: '3'
-
+version: '3.7'
 services:
-    wordpress:
-        build: requirements/wordpress/
-        image: wordpresss
-        container_name: wordpress
-        ports:
-            - "9000:9000"
-        env_file:
-            - ./.env
-        restart: unless-stopped
+  mariadb:
+    image: mariadb
+    container_name: mariadb
+    build: ./mariadb
+    restart: always
+    ports: 
+    - 3306:3306
+    volumes:
+      - maria_vol:/var/lib/mysql
+    networks:
+      - marianet
+    env_file:
+      - .env
 
-    nginx:
-        build: requirements/nginx/
-        image: nginxx
-        container_name: nginx
-        ports:
-            - "80:80"
-            - "443:443"
-        restart: unless-stopped
-
-    # mariadb:
-    #     build: requirements/mariadb
-    #     image: mariadbb
-    #     container_name: mariadb
-    #     ports:
-    #         - "3306:3306"
-    #     env_file:
-    #         - ./.env
-    #     restart: unless-stopped
-       
+  wordpress:
+    image: wordpress
+    container_name: wordpress
+    build: ./wordpress
+    depends_on:
+     - mariadb
+    expose:
+      - 9000
+    volumes:
+    - wordpress_vol:/var/www/html/wordpress
+    networks:
+    - marianet
+    restart: always
+    env_file:
+      - .env
+  nginx:
+    container_name: nginx
+    image: nginxx
+    build: ./nginx
+    ports:
+      - "443:443"
+      - "8000:80"
+    volumes:
+      - wordpress_vol:/var/www/html/wordpress
+    networks:
+    - marianet
+    restart: always
+volumes:
+  wordpress_vol:
+  maria_vol:
+networks:
+  marianet:
