--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -3,24 +3,20 @@
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
-
-        #ssl configuration
-        listen 443 ssl http2 default_server;
-        listen [::]:443 ssl http2 default_server;
-        ssl on;
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-
-        root /var/www/html;
+        root /var/www/html/wordpress;
         index index.html index.php
-        server_name _;
-        # New root location
+
+        access_log /var/log/nginx/wordpress_access.log;
+        error_log /var/log/nginx/wordpress_error.log;
+
+        client_max_body_size 64M;
+
         location / {
-                try_files $uri $uri/ =404;
-                # return 404;
+        try_files $uri $uri/ /index.php?$args;
         }
-        # pass PHP scripts to FastCGI server
-        location ~ \.php$ {
+
+        location ~ .php$ {
+                try_files $uri =404;
                 include /etc/nginx/fastcgi_params;
                 fastcgi_read_timeout 3600s;
                 fastcgi_buffer_size 128k;
@@ -28,5 +24,5 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_pass wordpress:9000;
                 fastcgi_index index.php;
-        }
+                }
 }
